Fix bug 386516 - Monthly repeating event on last day of month occurs on wrong dates. r=decathlon

--HG--
extra : rebase_source : da0f42b62c061ff4786e12b5bf053dfc83b703e5